samples/_failures_safe/1761501985_6f35fe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2db96d21.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_2db96d21.c:178:34: error: expected ‘;’ at end of input
  178 |         case TOKEN_NUMBER: printf
      |                                  ^
      |                                  ;
./samples/SAFE/__tmp_2db96d21.c:178:9: error: expected declaration or statement at end of input
  178 |         case TOKEN_NUMBER: printf
      |         ^~~~
./samples/SAFE/__tmp_2db96d21.c:178:9: error: expected declaration or statement at end of input
